--- a/Ass2_WebRazor/Ass2_WebRazor/Pages/Shared/_Layout.cshtml
+++ b/Ass2_WebRazor/Ass2_WebRazor/Pages/Shared/_Layout.cshtml
@@ -16,8 +16,8 @@
                 <h2>Book Stores</h2>
             </div>
             <ul class="sidebar-menu">
+                <li><a href="/Books/Index" class="sidebar-btn" style="color: #cdd8e0">Books</a></li>
                 <li><a href="#" class="sidebar-btn" style="color: #cdd8e0">Users</a></li>
-                <li><a href="#" class="sidebar-btn" style="color: #cdd8e0">Books</a></li>
                 <li><a href="#" class="sidebar-btn" style="color: #cdd8e0">Publishers</a></li>
                 <li><a href="#" class="sidebar-btn" style="color: #cdd8e0">Authors</a></li>
 
