--- a/Ass2_WebRazor/Ass2_WebRazor/Pages/Shared/_Layout.cshtml
+++ b/Ass2_WebRazor/Ass2_WebRazor/Pages/Shared/_Layout.cshtml
@@ -19,7 +19,7 @@
                 <li><a href="/Books/Index" class="sidebar-btn" style="color: #cdd8e0">Books</a></li>
                 <li><a href="#" class="sidebar-btn" style="color: #cdd8e0">Users</a></li>
                 <li><a href="#" class="sidebar-btn" style="color: #cdd8e0">Publishers</a></li>
-                <li><a href="#" class="sidebar-btn" style="color: #cdd8e0">Authors</a></li>
+                <li><a href="/Authors/Index" class="sidebar-btn" style="color: #cdd8e0">Authors</a></li>
 
             </ul>
         </div>
