CRUD author and design

--- a/Ass2_WebRazor/Ass2_WebRazor/Pages/Authors/Index.cshtml
+++ b/Ass2_WebRazor/Ass2_WebRazor/Pages/Authors/Index.cshtml
@@ -7,8 +7,8 @@
 
 <!-- Search form -->
 <div class="mb-3 d-flex" id="searchContainer" style="width: 30%;">
-    <input type="text" class="form-control" name="search" placeholder="Search..." id="searchInput">
-    <button type="button" class="btn btn-primary ml-2 align-self-end" id="searchButton">Search</button>
+    <input type="text" class="form-control" name="search" placeholder="search author last name ..." id="searchInput">
+    <button type="button" class="btn btn-primary ml-2 align-self-end" id="searchButton" style="margin-left: 20px;" >Search</button>
 </div>
 
 <!-- Create New button -->
