--- a/Ass2_WebRazor/Ass2_WebRazor/Pages/Authors/SearchView.cshtml
+++ b/Ass2_WebRazor/Ass2_WebRazor/Pages/Authors/SearchView.cshtml
@@ -10,8 +10,10 @@
 @{
     var searchTerm = Request.Query["search"];
 }
+<h4>
+    Result For Last Name : @searchTerm
+</h4>
 
-<p>Search term: @searchTerm</p>
 
 <!-- Authors table -->
 <div class="table-responsive">
