--- a/Ass2_WebRazor/Ass2_WebRazor/Pages/Authors/Update.cshtml
+++ b/Ass2_WebRazor/Ass2_WebRazor/Pages/Authors/Update.cshtml
@@ -26,7 +26,7 @@
         </div>
         <div class="form-group">
             <label for="address">Address</label>
-            <input type="text" class="form-control" id="address" name="address">
+            <input style=" width: 1000px; white-space: normal;" type="text" class="form-control" id="address" name="address">
         </div>
         <div class="form-group">
             <label for="city">City</label>
@@ -44,7 +44,8 @@
             <label for="email">Email</label>
             <input type="email" class="form-control" id="email" name="email">
         </div>
-        <button type="submit" class="btn btn-primary">Save</button>
+        <button type="submit" class="btn btn-primary" style="margin-top: 20px;"  >Save</button> 
+        <a href="/Authors/Index" class="btn btn-danger" style="margin-top: 20px;">Cancel</a>
     </form>
 </div>
 
