update author and authen login by jwt

--- a/Ass2_WebRazor/Ass2_WebRazor/Pages/Books/Create.cshtml
+++ b/Ass2_WebRazor/Ass2_WebRazor/Pages/Books/Create.cshtml
@@ -116,7 +116,7 @@
 </div>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <script>
-
+    var token = localStorage.getItem('token');
     $(document).ready(function () {
         getAllPublisher();
     });
@@ -212,6 +212,9 @@
             $.ajax({
                 type: "POST",
                 url: "https://localhost:7027/api/books",
+                headers: {
+                    'Authorization': 'Bearer ' + token
+                },
                 data: data,
                 contentType: false,
                 processData: false,
