change layout bar

--- a/Ass2_WebRazor/Ass2_WebRazor/Pages/Shared/_Layout.cshtml
+++ b/Ass2_WebRazor/Ass2_WebRazor/Pages/Shared/_Layout.cshtml
@@ -13,7 +13,7 @@
     <div class="container" style="margin-right:0px; margin-left:0px">
         <div class="sidebar">
             <div class="sidebar-header">
-                <h2>Book Stores</h2>
+                <h2 style=" padding-right: 150px; width: auto; white-space: nowrap;" >Book Stores</h2>
             </div>
             <ul class="sidebar-menu">
                 <li><a href="/Books/Index" class="sidebar-btn" style="color: #cdd8e0">Books</a></li>
