--- a/Ass2_WebRazor/Ass2_WebRazor/Pages/Books/Edit.cshtml
+++ b/Ass2_WebRazor/Ass2_WebRazor/Pages/Books/Edit.cshtml
@@ -68,7 +68,7 @@
 </style>
 
 <div class="containerCreate">
-    <h1>Create Book</h1>
+    <h1>Update Book</h1>
     <div>
         <label for="title">Title:</label>
         <input type="text" id="title" name="title">
@@ -113,6 +113,8 @@
     </div>
     <div>
         <input type="submit" id="saveButton" value="Save">
+        <input type="submit" id="cancelButton" style="color: white; background-color: red" value="Cancel">
+
     </div>
 </div>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
@@ -255,6 +257,9 @@
 
             console.log('Form is invalid. Please correct the errors.');
         }
+    });
+    $("#cancelButton").click(function () {
+        window.location.href = "https://localhost:7043/Books/Index";
     });
 
 </script>
