--- a/Ass2_WebRazor/Ass2_WebRazor/Pages/Login.cshtml
+++ b/Ass2_WebRazor/Ass2_WebRazor/Pages/Login.cshtml
@@ -79,7 +79,6 @@
                 <label for="email">Email:</label>
                 <input type="email" id="email" name="email" required>
             </div>
-            <div style="display: none; color: red ;margin-top :5px" id="email-status">Invalid email input</div>
             <div class="form-group">
                 <label for="password">Password:</label>
                 <input type="password" id="password" name="password" required>
@@ -97,7 +96,8 @@
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 <script>
      $(document).ready(function () {
-        $("#login").click(function () {
+        $("#login").click(function (event) {
+            event.preventDefault()
 
             var email = $("#email").val();
             var password = $("#password").val();
@@ -117,16 +117,17 @@
                 contentType: "application/json",
                 data: JSON.stringify(loginData),
                 success: function (result, status, xhr) {
-                    if (result.success) {
+                    if (result.success == true) {
                             localStorage.setItem('token', result.data);
 
                             handleSuccessfulLogin();
                     } else {
                         $("#login-error").text("Invalid email or password.").show();
+                        return;
                     }
                 },
                 error: function (xhr, status, error) {
-                    $("#login-error").text("An error occurred while logging in. Please try again later.").show();
+                    $("#login-error").text("Invalid email or password. Please try again later.").show();
                     console.error("Lỗi AJAX: " + error);
                 }
             });
