client user vs publisher
client user vs publisher

--- a/Ass2_WebRazor/Ass2_WebRazor/Pages/Shared/_Layout.cshtml
+++ b/Ass2_WebRazor/Ass2_WebRazor/Pages/Shared/_Layout.cshtml
@@ -17,8 +17,9 @@
             </div>
             <ul class="sidebar-menu">
                 <li><a href="/Books/Index" class="sidebar-btn" style="color: #cdd8e0">Books</a></li>
-                <li><a href="#" class="sidebar-btn" style="color: #cdd8e0">Users</a></li>
-                <li><a href="#" class="sidebar-btn" style="color: #cdd8e0">Publishers</a></li>
+                <li><a href="/Users/Index" class="sidebar-btn" style="color: #cdd8e0">Users</a></li>
+                <li><a href="/Publishers/Index" class="sidebar-btn" style="color: #cdd8e0">Publishers</a></li>
+                
                 <li><a href="/Authors/Index" class="sidebar-btn" style="color: #cdd8e0">Authors</a></li>
 
             </ul>
